# gpshell

./: .autotools  .cproject  .project  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
src/: Makefile.am  gpshell.cc  main.cc
src/.deps/: gpshell.Po
