dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(gpshell, 1.0, bugs@nullpointer.com.au, gpshell, http://products.nullpointer.com.au/gpshell)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(1.10 no-define)

AC_PROG_CXX(clang++ gcc++ g++)
AC_PROG_CC(clang gcc cc)

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

